# llm-rag-aircraft-maint-chatbot

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt
notebooks/chroma_db/: chroma.sqlite3
