[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aviation_rag"
version = "0.0.1"
description = "An intelligent LLM-based advisory system designed for aviation maintenance operations. This project uses Retrieval-Augmented Generation (RAG) to enable precise and context-aware responses from the Standard Aviation Operational Manual, allowing technicians to access maintenance procedures, safety protocols, and regulatory guidelines efficiently."
authors = [
  { name = "immrm" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "pip>=25.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "sentence-transformers>=5.1.2",
]


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
src = { workspace = true }

[dependency-groups]
dev = [
    "langchain-huggingface>=1.0.1",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "sentence-transformers>=5.1.2",
    "src",
]

